--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Booruchan</string>
     <string name="name">Name</string>
     <string name="password">Password</string>
+    <string name="app_settings">Application settings</string>
 </resources>
