--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="drawer_close">Close drawer</string>
     <string name="drawer_open">Open drawer</string>
     <string name="search_hint">Ex: blue_sky cloud 1girl</string>
+    <string name="color_theme">Color theme</string>
 </resources>
