Add Toasty library to gradle. Add network exception handler in adapter which is displaying, when the error occurs. Add inf loop in coroutine to waiting when connection is down and on connects continue post or preview loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="drawer_open">Open drawer</string>
     <string name="search_hint">Ex: blue_sky cloud 1girl</string>
     <string name="color_theme">Color theme</string>
+    <string name="network_error">The error was occur while a posts was loading… May be the network troubles?</string>
 </resources>
