--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="search_hint">Ex: blue_sky cloud 1girl</string>
     <string name="color_theme">Color theme</string>
     <string name="network_error">The error was occur while a posts was loading… May be the network troubles?</string>
+    <string name="updated">Updated</string>
 </resources>
