Add data text views for backdrop content view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
     <string name="go_to_page">Go to page</string>
     <string name="cancel">Cancel</string>
     <string name="go">Go</string>
+    <string name="id">Id:</string>
+    <string name="time">Posted:</string>
+    <string name="rating">Rating:</string>
 
     <string-array name="subservices">
         <item>Posts</item>
