--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="id">Id:</string>
     <string name="time">Posted:</string>
     <string name="rating">Rating:</string>
+    <string name="source">Source:</string>
 
     <string-array name="subservices">
         <item>Posts</item>
