[feature] Add start screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">BooruchanDynamic</string>
+    <string name="app_name">Booruchan</string>
+    <string name="settings">Settings</string>
 </resources>
