--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Booruchan</string>
     <string name="settings">Settings</string>
+    <string name="posts">Posts</string>
+    <string name="account">Account</string>
 </resources>
