[feature](sample) Update Controllers. Update download methods. Update image UI - add error message displaying and redownloading image on error message click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="settings">Settings</string>
     <string name="posts">Posts</string>
     <string name="account">Account</string>
+    <string name="sample_download_error">Failed to download sample</string>
 </resources>
