--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,14 @@
     <string name="posts">Posts</string>
     <string name="account">Account</string>
     <string name="sample_download_error">Failed to download sample</string>
+
+    <string-array name="post_properties">
+        <item>Id</item>
+        <item>Posted</item>
+        <item>User</item>
+        <item>Size</item>
+        <item>Source</item>
+        <item>Rating</item>
+        <item>Score</item>
+    </string-array>
 </resources>
