--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="sample_download_error">Failed to download sample</string>
     <string name="posts_download_error">Failed to download posts</string>
     <string name="tap_for_retry">Tap for retry</string>
+    <string name="info">Info</string>
+    <string name="comments">Comments</string>
 
     <string-array name="post_properties">
         <item>Id</item>
