--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="info">Info</string>
     <string name="comments">Comments</string>
     <string name="image">Image</string>
+    <string name="tags">Tags</string>
 
     <string-array name="post_properties">
         <item>Id</item>
