--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="was_loaded_succesfully">was loaded succesfully</string>
     <string name="image_was_not_loaded_succesfully">Image wasn\'t loaded successfully</string>
     <string name="permission_denied">Permission denied</string>
+    <string name="download_was_not_started">Download wasn\'t started</string>
+    <string name="file">File</string>
 
     <string-array name="post_properties">
         <item>Id</item>
