[feature] Add on sample long click popup menu and downloading file into external storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
         <item>Rating</item>
         <item>Score</item>
     </string-array>
+    <string-array name="sample_options">
+        <item>Download</item>
+    </string-array>
 </resources>
