[feature] Add NSFW setting and using it for posts searching

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="score">Score</string>
     <string name="rating">Rating</string>
     <string name="download_was_started">Download was started</string>
+    <string name="app_settings">Application settings</string>
+    <string name="enable_nsfw">Enable NSFW</string>
 
     <string-array name="post_properties">
         <item>Id</item>
