--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     </string>
     <string name="posts_ran_out">Posts is ran out\nCheck the previous pages to find them</string>
     <string name="images_ran_out">Images is ran out\nCheck the previous pages to find them</string>
+    <string name="search_hint">Ex: blue_sky cloud 1girl</string>
 
     <string-array name="post_properties">
         <item>Id</item>
