--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="images_ran_out">Images is ran out\nCheck the previous pages to find them</string>
     <string name="search_hint">Ex: blue_sky cloud 1girl</string>
     <string name="enable_stream_download">Enable streaming download</string>
+    <string name="prepare_to_download">Prepairings to download file</string>
 
     <string-array name="post_properties">
         <item>Id</item>
