--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="search_hint">Ex: blue_sky cloud 1girl</string>
     <string name="enable_stream_download">Enable streaming download</string>
     <string name="prepare_to_download">Prepairings to download file</string>
+    <string name="downloading">Downloading</string>
 
     <string-array name="post_properties">
         <item>Id</item>
