--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="prepare_to_download">Prepairings to download file</string>
     <string name="downloading">Downloading</string>
     <string name="download">Download</string>
+    <string name="enable_webm_playing_on_place">Enable WebM playing on place</string>
+    <string name="tap_to_play">Tap to start playing</string>
 
     <string-array name="post_properties">
         <item>Id</item>
