--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="enable_webm_playing_on_place">Enable WebM playing on place</string>
     <string name="tap_to_play">Tap to start playing</string>
     <string name="source">Source</string>
+    <string name="no_comments">Seems it hasn\'t comments... yet</string>
 
     <string-array name="post_properties">
         <item>Id</item>
