--- a/boorupostview/src/main/res/values/strings.xml
+++ b/boorupostview/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">boorupostview</string>
     <string name="posts">Posts</string>
+    <string name="start_search">Start search</string>
 </resources>
