feat(android): Add icons for the bottom navigation view

--- a/application/android/app/src/main/res/values/strings.xml
+++ b/application/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Booruchan</string>
+
+    <!-- Booru screen -->
+    <string name="booru_navigation_account">Account</string>
+    <string name="booru_navigation_posts">Posts</string>
+    <string name="booru_navigation_menu">Menu</string>
 </resources>
