--- a/application/android/app/src/main/res/values/strings.xml
+++ b/application/android/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <!-- Posts screen -->
     <string name="posts_button_retry">Retry</string>
     <string name="posts_footer_content_end">This is the end of the content</string>
-    <string name="posts_footer_content_error">A some throubles occurs while networking</string>
+    <string name="posts_footer_content_error">A some troubles occurs while networking</string>
+    <string name="posts_toolbar_search">Searching preferences</string>
 
 </resources>
