--- a/application/android/app/src/main/res/values/strings.xml
+++ b/application/android/app/src/main/res/values/strings.xml
@@ -19,5 +19,8 @@
     <string name="rating_type_safe">Safe</string>
     <string name="rating_type_questionable">Questionable</string>
     <string name="rating_type_explicit">Explicit</string>
+    <string name="posts_search_tags_character">Character</string>
+    <string name="posts_search_tags_metadata">Metadata</string>
+    <string name="posts_search_tags_copyright">Copyright</string>
 
 </resources>
