--- a/application/android/app/src/main/res/values/strings.xml
+++ b/application/android/app/src/main/res/values/strings.xml
@@ -15,12 +15,13 @@
     <string name="posts_search_rating">Rating</string>
     <string name="posts_search_tags_artist">Artist</string>
     <string name="posts_search_tags_general">General</string>
+    <string name="posts_search_tags_character">Character</string>
+    <string name="posts_search_tags_metadata">Metadata</string>
+    <string name="posts_search_tags_copyright">Copyright</string>
+    <string name="posts_search_apply_search_button">Apply</string>
 
     <string name="rating_type_safe">Safe</string>
     <string name="rating_type_questionable">Questionable</string>
     <string name="rating_type_explicit">Explicit</string>
-    <string name="posts_search_tags_character">Character</string>
-    <string name="posts_search_tags_metadata">Metadata</string>
-    <string name="posts_search_tags_copyright">Copyright</string>
 
 </resources>
